# telegram-analyzer

./: .gitignore  Makefile  pyproject.toml
analysis/: ClientPool.py  MyClient.py  cli.py
analysis/Reporter/: ChatHandler.py  __init__.py
analysis/analyzers/: DayTime.py  Frequency.py  TotalCount.py  VoiceDuration.py  WordCount.py  __init__.py
analysis/config/: __init__.py
analysis/models/: Chat.py  Task.py  __init__.py
analysis/models/Message/: DocumentAttribute.py  MessageMedia.py  Peer.py  __init__.py
analysis/models/Message/MediaDetails/: AudioDetails.py  PhotoDetails.py  __init__.py
analysis/utils/: LoggerTimer.py  format_user.py
cli/: MyNamespace.py  __main__.py  get_args.py
package/: ClientPool.py  MyClient.py  Reporter.py  __main__.py
package/Reporter/: ChatHandler.py  __init__.py
package/analyzers/: DayTime.py  Frequency.py  TotalCount.py  VoiceDuration.py  WordCount.py  __init__.py
package/cli/: MyNamespace.py  get_args.py
package/logging/: __init__.py
package/models/: Chat.py  __init__.py
package/models/Message/: DocumentAttribute.py  MessageMedia.py  __init__.py
package/models/Message/MediaDetails/: AudioDetails.py  __init__.py
package/utils/: LoggerTimer.py  format_user.py
processing/: cli.py
processing/client/: TaskHandler.py  __init__.py  cli.py  initialise_model.py
processing/proto/: tasks_pb2.py  tasks_pb2.pyi  tasks_pb2_grpc.py
processing/server/: __init__.py  cli.py
processing/server/servicers/: TasksManager.py
protobufs/processing/proto/: tasks.proto
